check if variable is empty

--- a/ansible/roles/configuration/templates/.gitconfig.j2
+++ b/ansible/roles/configuration/templates/.gitconfig.j2
@@ -1,5 +1,6 @@
 [core]
 	excludesfile = /Users/shinji/.gitignore_global
+  editor = vim -c \"set fenc=utf-8\"
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
 	path = -
