--- a/ansible/roles/configuration/templates/.gitconfig.j2
+++ b/ansible/roles/configuration/templates/.gitconfig.j2
@@ -1,14 +1,8 @@
 [core]
 	excludesfile = /Users/shinji/.gitignore_global
   editor = vim -c \"set fenc=utf-8\"
-[difftool "sourcetree"]
-	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path = -
-[mergetool "sourcetree"]
-	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
-	trustExitCode = true
 [user]
-	name = shinji
+	name = jinshi
 	email =
 [commit]
 	template = /Users/shinji/.stCommitMsg
