--- a/ansible/roles/configuration/templates/Debian/.vimrc.j2
+++ b/ansible/roles/configuration/templates/Debian/.vimrc.j2
@@ -3,6 +3,9 @@
 "set clipboard=unnamed
 set clipboard=unnamedplus
 
+set wildmenu
+set wildmode=longest:full,full
+
 " don not create swp file
 :set noswapfile
 " do not backup
